@@ -185,6 +185,17 @@
 				</executions>
 			</plugin>
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<argLine>
+						-XX:+EnableDynamicAgentLoading
+						--add-opens java.base/java.lang=ALL-UNNAMED
+						--add-opens java.base/java.util=ALL-UNNAMED
+					</argLine>
+				</configuration>
+			</plugin>
+			<plugin>
 				<groupId>com.tngtech.jgiven</groupId>
 				<artifactId>jgiven-maven-plugin</artifactId>
 				<version>${jgiven.version}</version>
